fix!: layout performance on Safari for iOS <17.1

--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,8 @@
 @tailwind utilities;
 
 :root {
-    background-color: var(--color-ivory-default);
+    /* font-synthesis: none !important; */
+    /* background-color: var(--color-ivory-default); */
 }
 
 @font-face {
@@ -14,16 +15,34 @@
 }
 
 @font-face {
-    font-family: 'Bodoni_Moda';
+    font-family: 'Baskerville';
     font-weight: 300;
-    src: url(/fonts/Bodoni_Moda/BodoniModa-VariableFont_opsz_wght.ttf);
+    src: url(/fonts/Baskerville/LibreBaskerville-Regular.ttf);
+    font-weight: normal;
 }
+
+@font-face {
+    font-family: 'Baskerville_Bold';
+    font-weight: 300;
+    src: url(/fonts/Baskerville/LibreBaskerville-Bold.ttf);
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: 'Baskerville_Italic';
+    font-weight: 300;
+    src: url(/fonts/Baskerville/LibreBaskerville-Italic.ttf);
+    font-weight: normal;
+    font-style: italic;
+}
+
 
 
 @theme {  
     /* Typography */
     --font-sans: "Atkinson_Hyperlegible_Next", "sans-serif"; 
-    --font-serif: "Bodoni_Moda", "serif";
+    --font-serif: "Baskerville_Bold", "serif";
+    --font-serif-italic: "Baskerville_Italic", "serif";
 
     /* Sizes */
     --container-desktop-size: 1920px;
@@ -38,114 +57,112 @@
 }
 
 @layer components {
-    .base {
-        h1 {
-            font-family: var(--font-serif);
-            font-size: var(--text-5xl);
-            font-weight: var(--font-weight-semibold);      
-            color: var(--color-gray-950);
-            line-height: 3rem;
+    h1 {
+        font-family: var(--font-serif);
+        font-size: var(--text-5xl);     
+        color: var(--color-gray-950);
+        line-height: 3rem;
+    }
+
+    h2 {
+        font-size: var(--text-3xl);
+        line-height: 2.5rem;
+    }
+
+    h3 {
+        font-family: var(--font-serif-italic);
+        font-size: var(--text-xl);
+        font-style: italic;
+        
+    }
+
+    h4 {
+        font-family: var(--font-serif-italic);
+        font-size: var(--text-md);
+        font-style: italic;
+        line-height: 1.5rem;
+    }
+
+    .essay {
+        h2, h3, h4, p {
+            margin: 2rem auto;
         }
 
-        h2 {
-            font-size: var(--text-3xl);
-            line-height: 2.5rem;
+        h4 > span {
+            vertical-align: super;
+            font-size: smaller;
+            padding-left: 5px;
         }
 
-        h3 {
-            font-family: var(--font-serif);
-            font-size: var(--text-xl);
-            font-style: italic;
-            
+        div.optional {
+            border-left: 1px solid black;
+            padding-left: 1rem;
         }
 
-        h4 {
-            font-family: var(--font-serif);
-            font-size: var(--text-md);
-            font-style: italic;
-            line-height: 1.5rem;
+        sup {
+            margin-left: 0.2rem;
+            color: var(--color-yellow-600);
         }
 
-        .step {
-            margin: 0 auto 2rem auto;
-            min-height: 100px;
+        .nyt {
+            color: var(--color-nyt-violet-default);
         }
 
-        #tooltip {
-            max-width: 200px;
-            display: flex;
-            background-color: white;
-            padding: 0rem 0.5rem;
-            border: 1px solid black;
-            
+        .zeit {
+            color: var(--color-zeit-peach-default);
         }
 
-        .essay {
-            h2, h3, h4, p {
-                margin: 2rem auto;
-            }
+        .footnotes {
+            color: var(--color-yellow-600);
 
-            h4 > span {
-                vertical-align: super;
-                font-size: smaller;
-                padding-left: 5px;
-            }
-
-            div.optional {
-                border-left: 1px solid black;
-                padding-left: 1rem;
-            }
-
-            sup {
-                margin-left: 0.2rem;
-                color: var(--color-yellow-600);
-            }
-
-            .nyt {
-                color: var(--color-nyt-violet-default);
-            }
-
-            .zeit {
-                color: var(--color-zeit-peach-default);
-            }
-
-            .footnotes {
-                color: var(--color-yellow-600);
-    
-                li {
-                    max-width: 200px;
-                    font-size: 12px;
-                    border-bottom: 1px solid var(--color-yellow-600);
-                    overflow: hidden;
-                    position: absolute;
-                    left: 70%;
-
-                    p {
-                        margin: 0.5rem;
-                    }
-                }
-            }
-        }
-
-        .optional-hidden {
-            .optional {
-                height: 0px;
-                border-bottom: 1px solid black;
+            li {
+                max-width: 200px;
+                font-size: 12px;
+                border-bottom: 1px solid var(--color-yellow-600);
+                overflow: hidden;
+                position: absolute;
+                left: 70%;
 
                 p {
-                    visibility: hidden;
+                    margin: 0.5rem;
                 }
-            } 
+            }
+        }
+    }
+
+    .step {
+        margin: 0 auto 2rem auto;
+        min-height: 100px;
+    }
+
+    #tooltip {
+        max-width: 200px;
+        display: flex;
+        background-color: white;
+        padding: 0rem 0.5rem;
+        border: 1px solid black;
+        
+    }
+
+
+    .optional-hidden {
+        .optional {
+            height: 0px;
+            border-bottom: 1px solid black;
+
+            p {
+                visibility: hidden;
+            }
+        } 
+    }
+
+    .visualization {
+        text.NYT {
+            filter: drop-shadow( 0px 0px 10px var(--color-nyt-violet-dark));
         }
 
-        .visualization {
-            text.NYT {
-                filter: drop-shadow( 0px 0px 10px var(--color-nyt-violet-dark));
-            }
-
-            text.Zeit {
-                filter: drop-shadow( 0px 0px 10px var(--color-zeit-peach-dark));
-            }
+        text.Zeit {
+            filter: drop-shadow( 0px 0px 10px var(--color-zeit-peach-dark));
         }
     }
 }
